--- a/templates/base.html
+++ b/templates/base.html
@@ -111,10 +111,18 @@
     </div>
     {% endblock %}
 
+  <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous">
+  </script>
   <!-- bootstrap js  -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <!-- TODO <script type="module" src="assets/js/starter.js"></script>-->
 
+    <!-- custom scripts for each module are loaded after any libs -->
+    {% block scripts %}
+    {% endblock %}
 
 </body>
 
