--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -34,5 +34,6 @@
 
 {# Assumes you set up the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p>Don't have an account yet? <a href="{% url 'register' %}">Register</a></p>
 
 {% endblock %}
