--- a/cmsblog/templates/cmsblog/comment_response.html
+++ b/cmsblog/templates/cmsblog/comment_response.html
@@ -15,15 +15,15 @@
         {% endif %}
       </span> 
       {% if user.is_authenticated and user == c.owner %}
-        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" 
+        <a class="" type="button" data-bs-toggle="collapse" 
           data-bs-target="#{{ form_id }}" aria-expanded="false" aria-controls="{{ form_id }}">
           Edit
-        </button>
-        <button data-thread-id="{{ thread_id}}" data-comment-id="{{ comment.pk }}" 
+        </a>
+        <a data-thread-id="{{ thread_id}}" data-comment-id="{{ comment.pk }}" 
           data-post-id="{{ post_id }}" data-bs-toggle="modal" data-bs-target="#delete_modal" 
-          class="btn btn-secondary">
+          class="">
           Delete
-        </button>
+        </a>
       {% endif %}
     </p>
   {% endif %}
@@ -37,7 +37,15 @@
     <form action="{% url 'blog:comment' post_id thread_id %}" 
       method="post" class="{{ form_class }}" id="{{ form_id }}">
       {% csrf_token %}
-      
+      <div class="mb-3">
+        {% if error_message %} {# comment form errors #}
+          <p><strong>{{ error_message }}</strong></p>
+        {% endif %}
+        <label for="{{ form_id }}_text" class="form-label">Your comment</label>
+        <textarea id="{{ form_id }}_text" class="form-control"
+            name="comment" required minlength="4" 
+            maxlength=1000 rows=5>{{ comment.comment_text }}</textarea>
+      </div>
       <button type="submit" class="btn btn-primary">Submit</button>
       <input type="hidden" name="comment_pk" value="{{ comment.pk }}">
     </form>
