--- a/cmsblog/templates/cmsblog/comment_response.html
+++ b/cmsblog/templates/cmsblog/comment_response.html
@@ -33,6 +33,7 @@
           </button>
         </div>
         <div class="row py-1">
+          <!-- comment delete -->
           <button data-thread-id="{{ thread_id}}" data-comment-id="{{ comment.pk }}" 
                data-post-id="{{ post_id }}" data-bs-toggle="modal" data-bs-target="#delete_modal" 
                class="centered-button btn btn-small btn-secondary">
@@ -41,6 +42,23 @@
             </svg>
           </button>
         </div>
+        {% elif not comment.deleted  %}
+              <div class="row py-1">
+                <button 
+                      data-thread-id="{{ thread_id}}" data-comment-id="{{ comment.pk }}" 
+                      data-post-id="{{ post_id }}" data-bs-toggle="modal" 
+                      class="centered-button btn btn-small btn-secondary"
+                    {% if user.is_authenticated %}
+                      data-bs-target="#flag_modal" 
+                    {% else %}
+                      data-bs-target="#unauth_modal" 
+                    {% endif %}
+                     >
+                  <svg class="bi" width="1rem" height="1rem" fill="currentColor">
+                    <use xlink:href="/static/bootstrap-icons.svg#flag"/>
+                  </svg>
+                </button>
+              </div>
         {% endif %}
       </div>
     </div>
