--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
     {% endblock %}
   </div>
 
-  <div class="container py-md-3" id="messages-section">
+  <div class="toast-container top-0 end-0 p-3" id="messages-section">
     {% block message_section %}
       {% if messages %}
         {% for message in messages %}
