--- a/cmsblog/templates/cmsblog/blog_post.html
+++ b/cmsblog/templates/cmsblog/blog_post.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% load humanize %}
 {% load wagtailcore_tags %}
 {% load wagtailuserbar %}
@@ -24,7 +25,7 @@
       <div class="row">
         <div class="col iconized">
             <svg class="bi bi-person" width="1em" height="1em" viewBox="0 0 1em 1em" fill="currentColor">
-              <use xlink:href="/static/bootstrap-icons.svg#person"/>
+              <use xlink:href="{% static 'node_modules/bootstrap-icons/bootstrap-icons.svg#person' %}"/>
             </svg>
             {{ page.owner.first_name }}
             {{ page.owner.last_name }}
