--- a/source/stylesheets/brand.scss
+++ b/source/stylesheets/brand.scss
@@ -1,5 +1,5 @@
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import "../../node_modules/bootstrap/scss/functions";
+@import "../../static/node_modules/bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
 $brand-primary:     #A0BCC2; 
@@ -26,7 +26,7 @@ $font-family-sans-serif:      $brand-font;
 
 
 // 3. Include remainder of required Bootstrap stylesheets
-@import "../../node_modules/bootstrap/scss/variables";
+@import "../../static/node_modules/bootstrap/scss/variables";
 
 // 4. Include any default map overrides here
 $custom-theme-colors:map-merge($theme-colors, (
@@ -40,54 +40,54 @@ $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
 //////////////////////////////////////////////////////////
 // from bootstrap.scss
 //////////////////////////////////////////////////////////
-@import "../../node_modules/bootstrap/scss/mixins/banner";
+@import "../../static/node_modules/bootstrap/scss/mixins/banner";
 @include bsBanner("");
 
 
 // scss-docs-start import-stack
 // Configuration
-@import "../../node_modules/bootstrap/scss/maps";
-@import "../../node_modules/bootstrap/scss/mixins";
-@import "../../node_modules/bootstrap/scss/utilities";
+@import "../../static/node_modules/bootstrap/scss/maps";
+@import "../../static/node_modules/bootstrap/scss/mixins";
+@import "../../static/node_modules/bootstrap/scss/utilities";
 
 // Layout & components
-@import "../../node_modules/bootstrap/scss/root";
-@import "../../node_modules/bootstrap/scss/reboot";
-@import "../../node_modules/bootstrap/scss/type";
-@import "../../node_modules/bootstrap/scss/images";
-@import "../../node_modules/bootstrap/scss/containers";
-@import "../../node_modules/bootstrap/scss/grid";
-@import "../../node_modules/bootstrap/scss/tables";
-@import "../../node_modules/bootstrap/scss/forms";
-@import "../../node_modules/bootstrap/scss/buttons";
-@import "../../node_modules/bootstrap/scss/transitions";
-@import "../../node_modules/bootstrap/scss/dropdown";
-@import "../../node_modules/bootstrap/scss/button-group";
-@import "../../node_modules/bootstrap/scss/nav";
-@import "../../node_modules/bootstrap/scss/navbar";
-@import "../../node_modules/bootstrap/scss/card";
-@import "../../node_modules/bootstrap/scss/accordion";
-@import "../../node_modules/bootstrap/scss/breadcrumb";
-@import "../../node_modules/bootstrap/scss/pagination";
-@import "../../node_modules/bootstrap/scss/badge";
-@import "../../node_modules/bootstrap/scss/alert";
-@import "../../node_modules/bootstrap/scss/progress";
-@import "../../node_modules/bootstrap/scss/list-group";
-@import "../../node_modules/bootstrap/scss/close";
-@import "../../node_modules/bootstrap/scss/toasts";
-@import "../../node_modules/bootstrap/scss/modal";
-@import "../../node_modules/bootstrap/scss/tooltip";
-@import "../../node_modules/bootstrap/scss/popover";
-@import "../../node_modules/bootstrap/scss/carousel";
-@import "../../node_modules/bootstrap/scss/spinners";
-@import "../../node_modules/bootstrap/scss/offcanvas";
-@import "../../node_modules/bootstrap/scss/placeholders";
+@import "../../static/node_modules/bootstrap/scss/root";
+@import "../../static/node_modules/bootstrap/scss/reboot";
+@import "../../static/node_modules/bootstrap/scss/type";
+@import "../../static/node_modules/bootstrap/scss/images";
+@import "../../static/node_modules/bootstrap/scss/containers";
+@import "../../static/node_modules/bootstrap/scss/grid";
+@import "../../static/node_modules/bootstrap/scss/tables";
+@import "../../static/node_modules/bootstrap/scss/forms";
+@import "../../static/node_modules/bootstrap/scss/buttons";
+@import "../../static/node_modules/bootstrap/scss/transitions";
+@import "../../static/node_modules/bootstrap/scss/dropdown";
+@import "../../static/node_modules/bootstrap/scss/button-group";
+@import "../../static/node_modules/bootstrap/scss/nav";
+@import "../../static/node_modules/bootstrap/scss/navbar";
+@import "../../static/node_modules/bootstrap/scss/card";
+@import "../../static/node_modules/bootstrap/scss/accordion";
+@import "../../static/node_modules/bootstrap/scss/breadcrumb";
+@import "../../static/node_modules/bootstrap/scss/pagination";
+@import "../../static/node_modules/bootstrap/scss/badge";
+@import "../../static/node_modules/bootstrap/scss/alert";
+@import "../../static/node_modules/bootstrap/scss/progress";
+@import "../../static/node_modules/bootstrap/scss/list-group";
+@import "../../static/node_modules/bootstrap/scss/close";
+@import "../../static/node_modules/bootstrap/scss/toasts";
+@import "../../static/node_modules/bootstrap/scss/modal";
+@import "../../static/node_modules/bootstrap/scss/tooltip";
+@import "../../static/node_modules/bootstrap/scss/popover";
+@import "../../static/node_modules/bootstrap/scss/carousel";
+@import "../../static/node_modules/bootstrap/scss/spinners";
+@import "../../static/node_modules/bootstrap/scss/offcanvas";
+@import "../../static/node_modules/bootstrap/scss/placeholders";
 
 // Helpers
-@import "../../node_modules/bootstrap/scss/helpers";
+@import "../../static/node_modules/bootstrap/scss/helpers";
 
 // Utilities
-@import "../../node_modules/bootstrap/scss/utilities/api";
+@import "../../static/node_modules/bootstrap/scss/utilities/api";
 // scss-docs-end import-stack
 
 // custom css
@@ -129,3 +129,11 @@ div.iconized {
 #messages-section {
   position: fixed;
 }
+
+// images in wagtail streamfields must be limited to fit within the div they are in
+.post-content-image {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+}
+
