add silly favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
   <script src="https://kit.fontawesome.com/271055586d.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <title>{% block title %}TODO - branding variables{% endblock %}</title>
+  <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 </head>
 
 <body>
