--- a/cmsblog/templates/cmsblog/comment_response.html
+++ b/cmsblog/templates/cmsblog/comment_response.html
@@ -3,15 +3,15 @@
   {% if comment %}
     <div class="row">
       <div class="col-md-11">
-        <p id="{{ c.text_target }}"> 
-          <span class="{{c.text_target}}">
+        <p id="{{ comment.text_target }}"> 
+          <span class="{{comment.text_target}}">
             {{ comment.get_text|urlize }} 
           </span>
           <span class="nowrap"> 
             - <a tabindex="0" class="popover-dismiss fw-bold" role="button" data-bs-toggle="popover" 
               data-bs-title="User Info" 
-              data-bs-content="{{ c.owner.first_name|default:"anonymous" }} {{ c.owner.last_name }}">
-              {{ c.owner|default:"anonymous" }}</a>
+              data-bs-content="{{ comment.owner.first_name|default:"anonymous" }} {{ comment.owner.last_name }}">
+              {{ comment.owner|default:"anonymous" }}</a>
             <span class="text-muted"> 
               {{ comment.last_published_at|timesince}} ago
               {% if comment.edited and not comment.deleted %} 
@@ -24,7 +24,7 @@
         </p>
       </div>
       <div class="col-md-1">
-        {% if user.is_authenticated and user == c.owner and not comment.deleted %}
+        {% if user.is_authenticated and user == comment.owner and not comment.deleted %}
         <div class="row py-1">
           <button class="centered-button btn btn-small btn-primary" data-bs-toggle="collapse" 
               data-bs-target="#{{ form_id }}" aria-expanded="false" aria-controls="{{ form_id }}">
@@ -81,7 +81,11 @@
         <label for="{{ form_id }}_text" class="form-label">Your comment</label>
         <textarea id="{{ form_id }}_text" class="form-control"
               name="comment" required minlength="4" 
-              maxlength=1000 rows=3>{{ comment.get_text }}</textarea>
+              maxlength=1000 rows=3>
+              {% if comment is not None %}
+                {{ comment.get_text }}
+              {% endif %}
+              </textarea>
       </div>
       <button type="submit" class="centered-button btn btn-primary">Submit</button>
       {% if comment %}
